@@ -43,3 +43,28 @@
         (assert (= t1 1))
         (assert (= t2 2))
         (assert (= t3 3))))
+
+(defclass SuppressZDE [object]
+  (defn --enter-- [self])
+  (defn --exit-- [self exc-type exc-value traceback]
+    (and (not (none? exc-type)) (issubclass exc-type ZeroDivisionError))))
+
+(defn test-exception-suppressing-with []
+  ; https://github.com/hylang/hy/issues/1320
+
+  (setv x (with [(SuppressZDE)] 5))
+  (assert (= x 5))
+
+  (setv y (with [(SuppressZDE)] (/ 1 0)))
+  (assert (none? y))
+
+  (setv z (with [(SuppressZDE)] (/ 1 0) 5))
+  (assert (none? z))
+
+  (defn f [] (with [(SuppressZDE)] (/ 1 0)))
+  (assert (none? (f)))
+
+  (setv w 7  l [])
+  (setv w (with [(SuppressZDE)] (.append l w) (/ 1 0) 5))
+  (assert (none? w))
+  (assert (= l [7])))
